# choir

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.adoc  README.md  TODO.adoc  compile_flags.txt  config.c  example.lyir  foo.h  nob.c  nob.h  nob.template.c  publish.bat  test.c  test.laye
.github/workflows/: dotnet.yml
bootstrap/: Choir.sln
bootstrap/Choir.Shared/: Choir.Shared.csproj  ChoirContext.cs  Diagnostics.cs  Location.cs  SizeAndAlign.cs  SourceFile.cs  TopologicalSort.cs
bootstrap/Choir.TestRunner/: Choir.TestRunner.csproj  Program.cs
bootstrap/LLVMTest/: LLVMTest.csproj  Program.cs
bootstrap/QbeSharp/: QbeBuilder.cs  QbeModule.cs  QbeSharp.csproj
bootstrap/System.Extensions/: ArrayExtensions.cs  DirectoryInfoExtensions.cs  IEnumerableExtensions.cs  ReadOnlySpanExtensions.cs  RuneExtensions.cs
bootstrap/laye/: Program.cs  laye.csproj
bootstrap/layec/: Program.cs  layec.csproj
cfg/: ExampleConfig.h  x86_64-pc-windows-clang.h  x86_64-pc-windows-msvc.h  x86_64-unknown-linux-clang.h
choir/: CMakeLists.txt
choir/_experiment/: driver.cc
choir/_interfaces/: Core.ixx
choir/_interfaces/Laye/: Sema.ixx  Syntax.ixx
choir/bootstrap/: Choir.sln
choir/bootstrap/Choir.Driver/: ArrayExtensions.cs  Choir.Driver.csproj  ChoirCCDriver.cs  ChoirContext.cs  ChoirDriver.cs  Diagnostics.cs  Location.cs  Program.cs  ReadOnlySpanExtensions.cs  RuneExtensions.cs  SizeAndAlign.cs  SourceFile.cs  StringBuilderExtensions.cs  StringExtensions.cs  Test.cs
choir/bootstrap/Choir.Driver/CommandLine/: CliOptionAttribute.cs  CliOptionParser.cs  Colors.cs  CommandLineOptions.cs
choir/bootstrap/Choir.Driver/Front/: BaseTreePrinter.cs
choir/bootstrap/Choir.Driver/Front/Laye/: ColorsExtensions.cs  Module.cs  ScopePrinter.cs  TranslationUnit.cs
choir/bootstrap/Choir.Driver/Front/Laye/Codegen/: LayeCodegen.cs
choir/bootstrap/Choir.Driver/Front/Laye/Sema/: BaseSemaNodes.cs  ConstantEvaluator.cs  Scope.cs  Sema.CHeaders.cs  Sema.cs  SemaDecls.cs  SemaExprs.cs  SemaPrinter.cs  SemaStmts.cs  SemaTypes.cs  TemplateInstantiator.cs
choir/bootstrap/Choir.Driver/Front/Laye/Syntax/: Lexer.cs  Parser.CHeaders.cs  Parser.cs  SyntaxDecls.cs  SyntaxExprs.cs  SyntaxFacts.cs  SyntaxKind.cs  SyntaxModule.cs  SyntaxNode.cs  SyntaxPrinter.cs  SyntaxStmts.cs  SyntaxToken.cs  SyntaxTranslationUnit.cs  TokenKind.cs
choir/bootstrap/Choir.Driver/IR/: ChoirBuilder.cs  ChoirModule.cs  ChoirType.cs  ChoirValue.cs
choir/bootstrap/Choir.Driver/Properties/: launchSettings.json
choir/bootstrap/Choir.Driver/QBE/: ChoirQbe.cs
choir/bootstrap/Choir.Shared/: Choir.Shared.csproj  ChoirContext.cs  Diagnostics.cs  Location.cs  Program.cs  SizeAndAlign.cs  SourceFile.cs
choir/bootstrap/Choir.Shared/Driver/: ChoirDriver.cs  InputFileLanguage.cs  LayecDriver.cs
choir/bootstrap/Choir.Shared/Front/Laye/: DeclarationSerialization.cs  LayeConstants.cs  LayeModule.cs  LayeNameMangler.cs  ModuleSerialization.cs  OldModule.cs  ScopePrinter.cs  TranslationUnit.cs
choir/bootstrap/Choir.Shared/Front/Laye/Codegen/: LayeCodegen.cs
choir/bootstrap/Choir.Shared/Front/Laye/Sema/: BaseSemaNodes.cs  ConstantEvaluator.cs  Scope.cs  Sema.cs  SemaDecls.cs  SemaExprs.cs  SemaPrinter.cs  SemaStmts.cs  SemaTypes.cs
choir/bootstrap/Choir.Shared/Front/Laye/Syntax/: Lexer.cs  Parser.cs  SyntaxDecls.cs  SyntaxExprs.cs  SyntaxPrinter.cs  SyntaxToken.cs  TokenKind.cs
choir/bootstrap/Choir.TestRunner/: Choir.TestRunner.csproj  Program.cs  TestLog.cs
choir/bootstrap/Choir.Tests/: Choir.Tests.csproj  DiagnosticVerificationTests.cs  ExecutionResultTests.cs  IRGenerationTests.cs
choir/bootstrap/LLVMTest/: LLVMTest.csproj  Program.cs
choir/bootstrap/LLVMTest/Properties/: launchSettings.json
choir/bootstrap/QbeSharp/: QbeContext.cs  QbeSharp.csproj  QbeType.cs  QbeValue.cs
choir/bootstrap/System.Extensions/: ArrayExtensions.cs  StringBuilderExtensions.cs  StringExtensions.cs  System.Extensions.csproj
choir/bootstrap/layec/: Program.cs
choir/bootstrap/layec/Properties/: launchSettings.json
choir/include/cc/: cc.h  std.inc  tokens.inc
choir/include/choir/: choir.h  config.h  core.hh  driver.hh  macros.h  macros.hh
choir/include/choir/core/: Assert.hh  Context.hh  File.hh  Forward.hh  Macros.hh  Types.hh  result.hh  rtti.hh
choir/include/choir/driver/: Driver.hh  Enums.hh  Forward.hh
choir/include/choir/front/: laye.hh  tree_printer.hh
choir/include/choir/front/laye/: sema.hh  syntax.hh
choir/include/laye/: laye.h  macros.h  tokens.inc
choir/include/peng/: peng.h
choir/include/score/: score.h
choir/lib/: Core.ixx  Driver.ixx  Frontend.ixx
choir/lib/Laye/: Laye.ixx  Lexer.cc  Parser.cc  Sema.ixx  Syntax.cc  Syntax.cpp  Syntax.ixx  SyntaxChildren.cc  SyntaxPrinter.cc
choir/lib/cc/: parse.c
choir/lib/choir/: alloc.c  arena.c  context.c  diag.c  gpalloc.c
choir/lib/core/: Context.cc  Core.cc  Diagnostics.cc  File.cc  Location.cc
choir/lib/driver/: Driver.cc
choir/lib/laye/: ast.c  eval.c  lex.c  token.c
choir/lib/peng/: lex.c
choir/lib/score/: lex.c
choir/src/: choir-driver.laye  choir.c  driver.cc  driver.hh  emit.cc  example.cc  laye.c  layec.c  main-driver.cc  main-driver.cpp  main.cc  main.cpp  peng.c  pink.c  score.c
choir/src/Frontend/: Frontend.cpp
choir/src/Laye/: Laye.cpp  Lexer.cpp  Parser.cpp
choir/src/_experiment/: example.cc  run_clang_driver.cc
choir/src/core/: Context.cc  Context.cpp  Core.cpp  Diagnostics.cpp  File.cpp  Location.cpp  StoredFloat.cpp  StoredInteger.cpp
choir/src/driver/: Driver.cpp
lib/laye/: libc.laye
liblaye/lib/: ffi.laye  libc.laye
src/: Choir.sln
src/Choir.Driver/: Choir.Driver.csproj  ChoirDriver.cs  Program.cs
src/Choir.FrontEnd.C/: Choir.FrontEnd.C.csproj  Class1.cs  Program.cs
src/Choir.FrontEnd.Choir/: Class1.cs
src/Choir.FrontEnd.Laye/: Choir.FrontEnd.Laye.csproj  LayeContext.cs  Program.cs
src/Choir.FrontEnd.Qbe/: Class1.cs
src/Choir.FrontEnd.Score/: Choir.FrontEnd.Score.csproj  Class1.cs  Program.cs  ScoreContext.cs
src/Choir.LLVM.SourceGenerator/: Choir.LLVM.SourceGenerator.csproj  (+4 more)
(+266 files in other folders)
